# BetterLog

./: CMakeLists.txt  README.md
src/: main.cpp
src/logging/: log.h  logfactory.h  logregistry.h
